# simple-gbdt

src/: CMakeLists.txt  gbdt.cpp  gbdt.h  ml_data.cpp  ml_data.h  tree.h
